# AI-Internship-Hunter

./: .gitignore  README.md  pyproject.toml
config/: candidate.json  preferences.json  providers.json  resume.json
examples/: jobs.json
src/ai_internship_hunter/: __init__.py  browser_bot.py  cli.py  config.py  cover_letter.py  dashboard.py  github_analyzer.py  interview_prep.py  matcher.py  materials.py  models.py  providers.py  reports.py  repository.py  resume.py  resume_documents.py  roles.py  semantic.py
tests/: test_browser_bot.py  test_cover_letter.py  test_dashboard.py  test_github_analyzer.py  test_interview_prep.py  test_matcher.py  test_providers.py  test_repository.py  test_resume.py  test_semantic.py
