[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-internship-hunter"
version = "0.3.0"
description = "Local-first internship discovery, matching, and review assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["python-docx>=1.1", "reportlab>=4.0"]

[project.optional-dependencies]
semantic = ["sentence-transformers>=3.0"]
browser = ["playwright>=1.40"]
test = ["pytest>=8.0", "pypdf>=4.0"]

[project.scripts]
internship-hunter = "ai_internship_hunter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
